feat: add profile update route
