# internal/api/router/router.go
@@ -3,7 +3,7 @@ package router
 import (
 	"example.com/m/internal/api/handlers"
 	"example.com/m/internal/api/handlers/admin"
-	"example.com/m/internal/api/handlers/users"
+	"example.com/m/internal/api/handlers/user"
 	"example.com/m/internal/api/middleware"
 	"example.com/m/internal/types"
 	"github.com/gin-gonic/gin"
@@ -26,23 +26,20 @@ func InitRouter() *gin.Engine {
 func registerPublicRoutes(r gin.RouterGroup) {
 	r.GET("ping", handlers.PingHandler)
 
-	r.POST("sign-up", users.SignUpHandler)
-	r.POST("sign-in", users.SignInHandler)
-	r.POST("refresh-token", users.RefreshTokenHandler)
+	r.POST("sign-up", user.SignUpHandler)
+	r.POST("sign-in", user.SignInHandler)
+	r.POST("refresh-token", user.RefreshTokenHandler)
 
 }
 
 func registerUserRoutes(r gin.RouterGroup) {
 	r.Use(middleware.UserAuthMiddleware)
-	r.GET("/user", users.GetUserHandler)
-	r.GET("ping_user", handlers.PingHandler)
+	r.GET("/user", user.GetUserHandler)
+	r.POST("/profile/update", user.ChangeProfileHandler)
 }
 
 func registerAdminRoutes(r gin.RouterGroup) {
 	r.Use(middleware.UserAuthMiddleware, middleware.RoleAuthMiddleware(types.RoleAdmin))
-
-	r.GET("admin/ping", handlers.PingHandler)
-
 	r.POST("admin/token/invalidate", admin.InvalidateTokenHandler)
 	r.POST("admin/token/invalidate-all", admin.InvalidateAllTokensHandler)
 	r.POST("admin/user/:user_id/ban", admin.ChangeUserStatushandler(types.StatusBanned))
